@@ -7,6 +7,7 @@
   o split drakautologin from drakboot (mga#7160)
 - draksound:
   o drop support for ISApnp sound cards
+  o drop support for picking an arbitrary driver
   o drop support for switching between OSS <-> ALSA
 
 Version 17.8 - 22 December 2015
